Add a method on the fixup object to strip off wyciwyg from nsIURIs Fixes bug 164006, wyciwyg: should not appear in tab title r=jag sr=bzbarsky