docshell/base/nsDocShell.h
@@ -200,7 +200,6 @@ protected:
     NS_IMETHOD SetupNewViewer(nsIContentViewer * aNewViewer);
 
     NS_IMETHOD GetEldestPresContext(nsIPresContext** aPresContext);
-    NS_IMETHOD CreateFixupURI(const nsAString& aStringURI, nsIURI ** aURI);
     NS_IMETHOD GetCurrentDocumentOwner(nsISupports ** aOwner);
     virtual nsresult DoURILoad(nsIURI * aURI,
                                nsIURI * aReferrer,
